# text-protocol-predictor

./: .gitignore  infer.py  pyproject.toml  test_model.py  train_grpo.py  train_sft.py
configs/: config.yaml  grpo.yaml
configs/accelerate/: ddp_4gpu.yaml
src/text_render_protocol_predictor/: __init__.py
src/text_render_protocol_predictor/data/: __init__.py  dataset.py  grpo_dataset.py  manifest.py  structural_noise.py  validation.py
src/text_render_protocol_predictor/evaluation/: __init__.py  generation.py  runner.py
src/text_render_protocol_predictor/models/: __init__.py  qwen3_vl.py
src/text_render_protocol_predictor/protocol/: __init__.py  canonicalizer.py  schema.py  validator.py
src/text_render_protocol_predictor/rendering/: __init__.py  syntext_renderer.py
src/text_render_protocol_predictor/rewards/: __init__.py  layout_iou.py  pixel_mae.py  word_content.py
src/text_render_protocol_predictor/training/: __init__.py  collator.py  grpo_trainer.py  prompts.py  sft_trainer.py
tests/: conftest.py
tests/data/: test_dataset.py  test_grpo_dataset.py  test_structural_noise.py  test_validation.py
tests/evaluation/: test_generation.py  test_runner.py
tests/models/: test_qwen3_vl.py
tests/protocol/: test_canonicalizer.py  test_validator.py
tests/rendering/: test_syntext_renderer.py
tests/rewards/: test_layout_iou.py  test_pixel_mae.py  test_word_content.py
tests/tools/: test_download_cyrillic_fonts.py
tests/training/: test_collator.py  test_grpo_trainer.py  test_metrics.py  test_prompts.py  test_scheduler.py  test_tracking.py
